--- a/assets/Css/BackgroundSpread.css
+++ b/assets/Css/BackgroundSpread.css
@@ -8,6 +8,7 @@
     overflow: hidden;
     mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, #000 25%, #000 75%, rgba(0, 0, 0, 0) 100%);
     height: 100%;
+    background-color: #000;
 }
 
 .background-spread img {
