--- a/assets/Css/BackgroundSpread.css
+++ b/assets/Css/BackgroundSpread.css
@@ -6,7 +6,6 @@
     left: 0;
     margin: 0;
     overflow: hidden;
-    mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, #000 25%, #000 75%, rgba(0, 0, 0, 0) 100%);
     height: 100%;
     background-color: #000;
 }
@@ -15,6 +14,7 @@
     width: 80%;
     position: absolute;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    /* mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, #000 25%, #000 75%, rgba(0, 0, 0, 0) 100%); */
     opacity: 0;
     animation-fill-mode: both;
 
