--- a/assets/Css/HompegeSlider.css
+++ b/assets/Css/HompegeSlider.css
@@ -2,6 +2,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    transition: transform 2s ease, opacity .5s ease-out
 }
 
 /* X-Small devices (portrait phones, less than 576px) */
