--- a/assets/Css/HompegeSlider.css
+++ b/assets/Css/HompegeSlider.css
@@ -2,7 +2,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0;
     transition: transform 2s ease, opacity .5s ease-out
+}
+
+#hompege-slider .carousel-item.active {
+    opacity: 1;
 }
 
 /* X-Small devices (portrait phones, less than 576px) */
