--- a/assets/Css/HompegeSlider.css
+++ b/assets/Css/HompegeSlider.css
@@ -2,8 +2,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0;
-    transition: transform 2s ease, opacity .5s ease-out
+    opacity: .2;
+    transition: opacity .2s ease-out;
 }
 
 #hompege-slider .carousel-item.active {
